scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Abuse_Icon__c.field-meta.xml
<CustomField>
<fullName>Abuse_Icon__c</fullName>
        <label>Abuse Icon</label>
        <type>Text</type>
        <length>50</length>
</CustomField>