scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Adjusted_LPN_Hours__c.field-meta.xml
<CustomField>
<fullName>Adjusted_LPN_Hours__c</fullName>
        <label>Adj LPN Hours/Resident/Day</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>2</scale>
</CustomField>