scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Adjusted_Weekend_Total_Hours__c.field-meta.xml
<CustomField>
<fullName>Adjusted_Weekend_Total_Hours__c</fullName>
        <label>Adj Weekend Total Nurse Hours/Residen...</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>2</scale>
</CustomField>