scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Administrator_Turnover_Footnote__c.field-meta.xml
<CustomField>
<fullName>Administrator_Turnover_Footnote__c</fullName>
        <label>Administrator turnover footnote</label>
        <type>Text</type>
        <length>255</length>
</CustomField>