scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Automatic_Sprinkler_Systems__c.field-meta.xml
<CustomField>
<fullName>Automatic_Sprinkler_Systems__c</fullName>
        <label>Auto Sprinklers (All Areas)</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
</CustomField>