scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Average_Number_of_Residents_per_Day__c.field-meta.xml
<CustomField>
<fullName>Average_Number_of_Residents_per_Day__c</fullName>
        <label>Average Number of Residents per Day</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>2</scale>
</CustomField>