scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Avg_Residents_per_Day_Footnote__c.field-meta.xml
<CustomField>
<fullName>Avg_Residents_per_Day_Footnote__c</fullName>
        <label>Avg Num Residents per Day Footnote</label>
        <type>Text</type>
        <length>255</length>
</CustomField>