scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Case_Mix_Nurse_Aide_Hours__c.field-meta.xml
<CustomField>
<fullName>Case_Mix_Nurse_Aide_Hours__c</fullName>
        <label>CaseMix Nurse Aide Hours/Resident/Day</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>2</scale>
</CustomField>