scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Case_Mix_Weekend_Total_Hours__c.field-meta.xml
<CustomField>
<fullName>Case_Mix_Weekend_Total_Hours__c</fullName>
        <label>CaseMix Weekend Total Nurse Hours/Res...</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>2</scale>
</CustomField>