scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Chain_Avg_Overall_5_star_Rating__c.field-meta.xml
<CustomField>
<fullName>Chain_Avg_Overall_5_star_Rating__c</fullName>
        <label>Chain Average Overall 5-star Rating</label>
        <type>Number</type>
        <precision>3</precision>
        <scale>2</scale>
</CustomField>