scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Chain_ID__c.field-meta.xml
<CustomField>
<fullName>Chain_ID__c</fullName>
        <label>Chain ID</label>
        <type>Text</type>
        <length>50</length>
</CustomField>