scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Chain_Name__c.field-meta.xml
<CustomField>
<fullName>Chain_Name__c</fullName>
        <label>Chain Name</label>
        <type>Text</type>
        <length>255</length>
</CustomField>