scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Citations_from_Infection_Control__c.field-meta.xml
<CustomField>
<fullName>Citations_from_Infection_Control__c</fullName>
        <label>Num Citations from Infection Control ...</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
</CustomField>