scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/City_Town__c.field-meta.xml
<CustomField>
<fullName>City_Town__c</fullName>
        <label>City/Town</label>
        <type>Text</type>
        <length>100</length>
</CustomField>