scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/CMS_Certification_Number__c.field-meta.xml
<CustomField>
<fullName>CMS_Certification_Number__c</fullName>
        <label>CMS Certification Number (CCN)</label>
        <type>Text</type>
        <length>50</length>
        <externalId>true</externalId>
</CustomField>