scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Continuing_Care_Retirement_Community__c.field-meta.xml
<CustomField>
<fullName>Continuing_Care_Retirement_Community__c</fullName>
        <label>Continuing Care Retirement Community</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
</CustomField>