scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/County_Parish__c.field-meta.xml
<CustomField>
<fullName>County_Parish__c</fullName>
        <label>County/Parish</label>
        <type>Text</type>
        <length>100</length>
</CustomField>