scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Cycle_1_Number_of_Health_Revisits__c.field-meta.xml
<CustomField>
<fullName>Cycle_1_Number_of_Health_Revisits__c</fullName>
        <label>Rating Cycle 1 Number of Health Revisits</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
</CustomField>