scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Cycle_1_Standard_Health_Deficiencies__c.field-meta.xml
<CustomField>
<fullName>Cycle_1_Standard_Health_Deficiencies__c</fullName>
        <label>Cycle 1 Num Std Health Defic</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
</CustomField>