scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Cycle_1_Standard_Survey_Health_Date__c.field-meta.xml
<CustomField>
<fullName>Cycle_1_Standard_Survey_Health_Date__c</fullName>
        <label>Cycle 1 Standard Survey Health Date</label>
        <type>Date</type>
</CustomField>