scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Cycle_1_Total_Health_Score__c.field-meta.xml
<CustomField>
<fullName>Cycle_1_Total_Health_Score__c</fullName>
        <label>Rating Cycle 1 Total Health Score</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>2</scale>
</CustomField>