scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Cycle_2_3_Health_Deficiency_Score__c.field-meta.xml
<CustomField>
<fullName>Cycle_2_3_Health_Deficiency_Score__c</fullName>
        <label>Rating Cycle 2/3 Health Deficiency Score</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>2</scale>
</CustomField>