scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Cycle_2_3_Number_of_Health_Revisits__c.field-meta.xml
<CustomField>
<fullName>Cycle_2_3_Number_of_Health_Revisits__c</fullName>
        <label>Cycle 2/3 Num Health Revisits</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
</CustomField>