scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Cycle_2_3_Total_Health_Deficiencies__c.field-meta.xml
<CustomField>
<fullName>Cycle_2_3_Total_Health_Deficiencies__c</fullName>
        <label>Cycle 2/3 Total Num Health Defic</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
</CustomField>