scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Cycle_2_Standard_Health_Survey_Date__c.field-meta.xml
<CustomField>
<fullName>Cycle_2_Standard_Health_Survey_Date__c</fullName>
        <label>Cycle 2 Std Health Survey Date</label>
        <type>Date</type>
</CustomField>