scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Date_First_Approved__c.field-meta.xml
<CustomField>
<fullName>Date_First_Approved__c</fullName>
        <label>Medicare/Medicaid Approval Date</label>
        <type>Date</type>
</CustomField>