scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Geocoding_Footnote__c.field-meta.xml
<CustomField>
<fullName>Geocoding_Footnote__c</fullName>
        <label>Geocoding Footnote</label>
        <type>Text</type>
        <length>255</length>
</CustomField>