scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Health_Inspection_Rating__c.field-meta.xml
<CustomField>
<fullName>Health_Inspection_Rating__c</fullName>
        <label>Health Inspection Rating</label>
        <type>Number</type>
        <precision>2</precision>
        <scale>0</scale>
</CustomField>