scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Health_Inspection_Rating_Footnote__c.field-meta.xml
<CustomField>
<fullName>Health_Inspection_Rating_Footnote__c</fullName>
        <label>Health Inspection Rating Footnote</label>
        <type>Text</type>
        <length>255</length>
</CustomField>