scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Latitude__c.field-meta.xml
<CustomField>
<fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <type>Number</type>
        <precision>12</precision>
        <scale>8</scale>
</CustomField>