scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Legal_Business_Name__c.field-meta.xml
<CustomField>
<fullName>Legal_Business_Name__c</fullName>
        <label>Legal Business Name</label>
        <type>Text</type>
        <length>255</length>
</CustomField>