scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Location__c.field-meta.xml
<CustomField>
<fullName>Location__c</fullName>
        <label>Location</label>
        <type>Location</type>
        <scale>6</scale>
</CustomField>