scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Longitude__c.field-meta.xml
<CustomField>
<fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <type>Number</type>
        <precision>12</precision>
        <scale>8</scale>
</CustomField>