scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Number_of_Administrators_Left__c.field-meta.xml
<CustomField>
<fullName>Number_of_Administrators_Left__c</fullName>
        <label>Num administrators who have left the ...</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
</CustomField>