scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Number_of_Facilities_in_Chain__c.field-meta.xml
<CustomField>
<fullName>Number_of_Facilities_in_Chain__c</fullName>
        <label>Number of Facilities in Chain</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
</CustomField>