scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Number_of_Facility_Reported_Incidents__c.field-meta.xml
<CustomField>
<fullName>Number_of_Facility_Reported_Incidents__c</fullName>
        <label>Number of Facility Reported Incidents</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
</CustomField>