scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Number_of_Fines__c.field-meta.xml
<CustomField>
<fullName>Number_of_Fines__c</fullName>
        <label>Number of Fines</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
</CustomField>