scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Number_of_Substantiated_Complaints__c.field-meta.xml
<CustomField>
<fullName>Number_of_Substantiated_Complaints__c</fullName>
        <label>Number of Substantiated Complaints</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
</CustomField>