scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Nursing_Case_Mix_Index_Ratio__c.field-meta.xml
<CustomField>
<fullName>Nursing_Case_Mix_Index_Ratio__c</fullName>
        <label>Nursing Case-Mix Index Ratio</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>4</scale>
</CustomField>