scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Overall_Rating__c.field-meta.xml
<CustomField>
<fullName>Overall_Rating__c</fullName>
        <label>Overall Rating</label>
        <type>Number</type>
        <precision>2</precision>
        <scale>0</scale>
</CustomField>