scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Overall_Rating_Footnote__c.field-meta.xml
<CustomField>
<fullName>Overall_Rating_Footnote__c</fullName>
        <label>Overall Rating Footnote</label>
        <type>Text</type>
        <length>255</length>
</CustomField>