scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Ownership_Changed_Last_12_Months__c.field-meta.xml
<CustomField>
<fullName>Ownership_Changed_Last_12_Months__c</fullName>
        <label>Ownership Changed (12mo)</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
</CustomField>