scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Ownership_Type__c.field-meta.xml
<CustomField>
<fullName>Ownership_Type__c</fullName>
        <label>Ownership Type</label>
        <type>Text</type>
        <length>100</length>
</CustomField>