scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Physical_Therapist_Staffing_Footnote__c.field-meta.xml
<CustomField>
<fullName>Physical_Therapist_Staffing_Footnote__c</fullName>
        <label>Physical Therapist Staffing Footnote</label>
        <type>Text</type>
        <length>255</length>
</CustomField>