scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Processing_Date__c.field-meta.xml
<CustomField>
<fullName>Processing_Date__c</fullName>
        <label>Processing Date</label>
        <type>Date</type>
</CustomField>