scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Provider_Address__c.field-meta.xml
<CustomField>
<fullName>Provider_Address__c</fullName>
        <label>Provider Address</label>
        <type>Text</type>
        <length>255</length>
</CustomField>