scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Provider_Name__c.field-meta.xml
<CustomField>
<fullName>Provider_Name__c</fullName>
        <label>Provider Name</label>
        <type>Text</type>
        <length>255</length>
</CustomField>