scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Provider_Resides_in_Hospital__c.field-meta.xml
<CustomField>
<fullName>Provider_Resides_in_Hospital__c</fullName>
        <label>Provider Resides in Hospital</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
</CustomField>