scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Provider_SSA_County_Code__c.field-meta.xml
<CustomField>
<fullName>Provider_SSA_County_Code__c</fullName>
        <label>Provider SSA County Code</label>
        <type>Text</type>
        <length>10</length>
</CustomField>