scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Provider_Type__c.field-meta.xml
<CustomField>
<fullName>Provider_Type__c</fullName>
        <label>Provider Type</label>
        <type>Text</type>
        <length>100</length>
</CustomField>