scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/QM_Rating__c.field-meta.xml
<CustomField>
<fullName>QM_Rating__c</fullName>
        <label>QM Rating</label>
        <type>Number</type>
        <precision>2</precision>
        <scale>0</scale>
</CustomField>