scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/QM_Rating_Footnote__c.field-meta.xml
<CustomField>
<fullName>QM_Rating_Footnote__c</fullName>
        <label>QM Rating Footnote</label>
        <type>Text</type>
        <length>255</length>
</CustomField>