scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Recent_Inspection_More_Than_2_Years__c.field-meta.xml
<CustomField>
<fullName>Recent_Inspection_More_Than_2_Years__c</fullName>
        <label>Most Recent Health Insp More Than 2 Y...</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
</CustomField>