scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Reported_PT_Staffing_Hours__c.field-meta.xml
<CustomField>
<fullName>Reported_PT_Staffing_Hours__c</fullName>
        <label>Rpt PT Staffing Hours per Resident Pe...</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>2</scale>
</CustomField>