scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Reported_RN_Hours__c.field-meta.xml
<CustomField>
<fullName>Reported_RN_Hours__c</fullName>
        <label>Rpt RN Hours/Resident/Day</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>2</scale>
</CustomField>