scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Reported_Staffing_Footnote__c.field-meta.xml
<CustomField>
<fullName>Reported_Staffing_Footnote__c</fullName>
        <label>Reported Staffing Footnote</label>
        <type>Text</type>
        <length>255</length>
</CustomField>