scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/RN_Hours_Weekend__c.field-meta.xml
<CustomField>
<fullName>RN_Hours_Weekend__c</fullName>
        <label>RN Hours/Resident Weekend</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>2</scale>
</CustomField>