scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/RN_Turnover__c.field-meta.xml
<CustomField>
<fullName>RN_Turnover__c</fullName>
        <label>Registered Nurse turnover</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>2</scale>
</CustomField>