scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/RN_Turnover_Footnote__c.field-meta.xml
<CustomField>
<fullName>RN_Turnover_Footnote__c</fullName>
        <label>Registered Nurse turnover footnote</label>
        <type>Text</type>
        <length>255</length>
</CustomField>