scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Short_Stay_QM_Rating__c.field-meta.xml
<CustomField>
<fullName>Short_Stay_QM_Rating__c</fullName>
        <label>Short-Stay QM Rating</label>
        <type>Number</type>
        <precision>2</precision>
        <scale>0</scale>
</CustomField>