scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Short_Stay_QM_Rating_Footnote__c.field-meta.xml
<CustomField>
<fullName>Short_Stay_QM_Rating_Footnote__c</fullName>
        <label>Short-Stay QM Rating Footnote</label>
        <type>Text</type>
        <length>255</length>
</CustomField>