scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Special_Focus_Status__c.field-meta.xml
<CustomField>
<fullName>Special_Focus_Status__c</fullName>
        <label>Special Focus Status</label>
        <type>Text</type>
        <length>100</length>
</CustomField>