scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Staffing_Rating_Footnote__c.field-meta.xml
<CustomField>
<fullName>Staffing_Rating_Footnote__c</fullName>
        <label>Staffing Rating Footnote</label>
        <type>Text</type>
        <length>255</length>
</CustomField>