scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/State__c.field-meta.xml
<CustomField>
<fullName>State__c</fullName>
        <label>State</label>
        <type>Text</type>
        <length>50</length>
</CustomField>