scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Total_Amount_of_Fines__c.field-meta.xml
<CustomField>
<fullName>Total_Amount_of_Fines__c</fullName>
        <label>Total Amount of Fines in Dollars</label>
        <type>Currency</type>
        <precision>18</precision>
        <scale>2</scale>
</CustomField>