scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Total_Number_of_Penalties__c.field-meta.xml
<CustomField>
<fullName>Total_Number_of_Penalties__c</fullName>
        <label>Total Number of Penalties</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
</CustomField>