scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Total_Nurse_Hours_Weekend__c.field-meta.xml
<CustomField>
<fullName>Total_Nurse_Hours_Weekend__c</fullName>
        <label>Total number of nurse staff Hours/Res...</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>2</scale>
</CustomField>