scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Total_Nursing_Staff_Turnover__c.field-meta.xml
<CustomField>
<fullName>Total_Nursing_Staff_Turnover__c</fullName>
        <label>Total nursing staff turnover</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>2</scale>
</CustomField>