scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Total_Nursing_Staff_Turnover_Footnote__c.field-meta.xml
<CustomField>
<fullName>Total_Nursing_Staff_Turnover_Footnote__c</fullName>
        <label>Total nursing staff turnover footnote</label>
        <type>Text</type>
        <length>255</length>
</CustomField>