scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/Total_Weighted_Health_Survey_Score__c.field-meta.xml
<CustomField>
<fullName>Total_Weighted_Health_Survey_Score__c</fullName>
        <label>Total Weighted Health Survey Score</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>2</scale>
</CustomField>