scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/With_Resident_and_Family_Council__c.field-meta.xml
<CustomField>
<fullName>With_Resident_and_Family_Council__c</fullName>
        <label>With a Resident and Family Council</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
</CustomField>