scratch/Salesforce_project/deployment/force-app/main/default/objects/Account/fields/ZIP_Code__c.field-meta.xml
<CustomField>
<fullName>ZIP_Code__c</fullName>
        <label>ZIP Code</label>
        <type>Text</type>
        <length>10</length>
</CustomField>